# Advanced1_HW4

./: AStarCmp.h  AllMatrices.txt  BFS.txt  BestFS.txt  BestFirstSearch.cpp  BestFirstSearch.h  BreadthFirstSearch.cpp  BreadthFirstSearch.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.h  CostCmp.h  DFS.txt  DepthFirstSearch.cpp  DepthFirstSearch.h  FileCacheManager.cpp  FileCacheManager.h  MatrixProblem.cpp  MatrixProblem.h  MyClientHandler.cpp  MyClientHandler.h  MyCmp.h  MyParallelServer.cpp  MyParallelServer.h  MyPriorityQueue.cpp  MyPriorityQueue.h  MyQueue.cpp  MyQueue.h  MySerialServer.cpp  MySerialServer.h  MyStack.cpp  MyStack.h  MyTestClientHandler.h  README.md  Searchable.h  Searcher.h  Server.h  ShitSolver.cpp  ShitSolver.h  (+9 more)
matrix/: matrix1.txt  matrix10.txt  matrix2.txt  matrix3.txt  matrix4.txt  matrix5.txt  matrix6.txt  matrix7.txt  matrix8.txt  matrix9.txt
